--- a/assets/css/drivschol-landing.css
+++ b/assets/css/drivschol-landing.css
@@ -17,20 +17,20 @@
   --drivschol-fontawesome: "Font Awesome 5 free";
   --drivschol-primary: #EC2526;
   --drivschol-primary-rgb:236, 37, 38;
-  --drivschol-text: #6D7076;
-  --drivschol-text-rgb: 109, 112, 118;
-  --drivschol-heading-text: #111117;
+  --drivschol-text: #000;
+  --drivschol-text-rgb: #000;
+  --drivschol-heading-text: blue;
   --drivschol-heading-text-rgb: 17, 17, 23;
-  --drivschol-text-dark: #6e6b70;
+  --drivschol-text-dark: #000;
   --drivschol-text-dark-rgb: 110, 107, 112;
-  --drivschol-text-gray: #89868d;
-  --drivschol-text-gray-rgb: 137, 134, 141;
-  --drivschol-gray: #6D7076;
-  --drivschol-gray-rgb: 109, 112, 118;
-  --drivschol-gray2: #F5F5F5;
-  --drivschol-gray2-rgb: 245, 245, 245;
-  --drivschol-gray3: #9D9D9D;
-  --drivschol-gray3-rgb: 157, 157, 157;
+  --drivschol-text-gray: #000;
+  --drivschol-text-gray-rgb: #000;
+  --drivschol-gray: #000;
+  --drivschol-gray-rgb: 000;
+  --drivschol-gray2: #000;
+  --drivschol-gray2-rgb: #000;
+  --drivschol-gray3: #000;
+  --drivschol-gray3-rgb: #000;
   --drivschol-white: #fff;
   --drivschol-white-rgb: 255, 255, 255;
   --drivschol-black: blue;
@@ -258,7 +258,7 @@
   -webkit-appearance: none;
   border: none;
   outline: none;
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   color: var(--drivschol-white, #fff);
   font-size: 16px;
   font-weight: 700;
@@ -267,7 +267,7 @@
   line-height: 100%;
   transition: 500ms;
   text-transform: capitalize;
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   color: var(--drivschol-white, #fff);
   position: relative;
   overflow: hidden;
@@ -275,7 +275,7 @@
   z-index: 1;
 }
 .drivschol-btn:hover {
-  color: var(--drivschol-black2, #111117);
+  color: var(--drivschol-black2, blue);
   background-color: var(--drivschol-white, #fff);
 }
 .drivschol-btn::before {
@@ -288,7 +288,7 @@
   height: 150%;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   transition: 700ms cubic-bezier(0.52, 1.64, 0.37, 0.66);
   z-index: -1;
 }
@@ -308,7 +308,7 @@
   z-index: -1;
 }
 .drivschol-btn:hover {
-  color: var(--drivschol-black2, #111117);
+  color: var(--drivschol-black2, blue);
 }
 .drivschol-btn:hover::before {
   top: 100%;
@@ -331,7 +331,7 @@
   background-color: var(--drivschol-primary, #EC2526);
 }
 .drivschol-btn--black::before {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
 }
 .drivschol-btn--base:hover {
   color: var(--drivschol-white, #fff);
@@ -340,13 +340,13 @@
   background-color: var(--drivschol-primary, #EC2526);
 }
 .drivschol-btn--base::before {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
 }
 .drivschol-btn--base2:hover {
   color: var(--drivschol-white, #fff);
 }
 .drivschol-btn--base2::after {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
 }
 .drivschol-btn--base2::before {
   background-color: var(--drivschol-primary, #EC2526);
@@ -357,7 +357,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: var(--drivschol-font, "Manrope", sans-serif);
-  color: var(--drivschol-text, #6D7076);
+  color: var(--drivschol-text, #000);
   font-size: 16px;
   line-height: 150%;
   font-weight: 500;
@@ -365,7 +365,7 @@ body {
 }
 
 a {
-  color: var(--drivschol-text, #6D7076);
+  color: var(--drivschol-text, #000);
 }
 
 p {
@@ -388,7 +388,7 @@ h4,
 h5,
 h6 {
   font-family: var(--drivschol-heading-font, "Urbanist", sans-serif);
-  color: var(--drivschol-heading-text, #111117);
+  color: var(--drivschol-heading-text, blue);
   line-height: 1.3;
   margin-bottom: 15px;
 }
@@ -432,19 +432,19 @@ a:visited {
 }
 
 .background-base {
-  background-color: var(--drivschol-text, #6D7076);
+  background-color: var(--drivschol-text, #000);
 }
 
 .background-gray {
-  background-color: var(--drivschol-gray, #6D7076);
+  background-color: var(--drivschol-gray, #000);
 }
 
 .background-black {
-  background-color: var(--drivschol-black, #000);
+  background-color: var(--drivschol-black, blue);
 }
 
 .background-black-2 {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
 }
 
 .background-primary {
@@ -509,12 +509,12 @@ a:visited {
 }
 .bootstrap-select .dropdown-item.active,
 .bootstrap-select .dropdown-item:active {
-  background-color: var(--drivschol-text, #6D7076);
+  background-color: var(--drivschol-text, #000);
 }
 
 .preloader {
   position: fixed;
-  background-color: var(--drivschol-black, #000);
+  background-color: var(--drivschol-black, blue);
   background-position: center center;
   background-repeat: no-repeat;
   top: 0;
@@ -587,7 +587,7 @@ a:visited {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
 }
 .scroll-to-top.show {
   opacity: 1;
@@ -636,7 +636,7 @@ a:visited {
   outline: none;
   width: 50px;
   height: 50px;
-  background-color: var(--drivschol-gray, #6D7076);
+  background-color: var(--drivschol-gray, #000);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -646,7 +646,7 @@ a:visited {
   transition: all 500ms ease;
 }
 .drivschol-owl__carousel--basic-nav .owl-nav button i:hover {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   color: var(--drivschol-white, #fff);
 }
 .drivschol-owl__carousel--basic-nav .owl-dots {
@@ -657,14 +657,14 @@ a:visited {
   margin-top: 60px;
 }
 .drivschol-owl__carousel--basic-nav .owl-dots .owl-dot span {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   border: 2px solid var(--drivschol-white, #fff);
   box-shadow: 0 0 1px rgba(var(--drivschol-black-rgb, 0, 0, 0), 1);
   margin: 0;
 }
 .drivschol-owl__carousel--basic-nav .owl-dots .owl-dot:hover span, .drivschol-owl__carousel--basic-nav .owl-dots .owl-dot.active span {
-  background-color: var(--drivschol-black2, #111117);
-  border: 2px solid var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
+  border: 2px solid var(--drivschol-black2, blue);
   box-shadow: 0 0 1px rgba(var(--drivschol-black-rgb, 0, 0, 0), 1);
 }
 .drivschol-owl__carousel--basic-nav .owl-nav.disabled + .owl-dots {
@@ -675,7 +675,7 @@ a:visited {
 # Hero Section
 --------------------------------------------------------------*/
 .hero-section {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
@@ -755,7 +755,7 @@ a:visited {
   background-color: var(--drivschol-white, #fff);
 }
 .hero-section .drivschol-btn:hover {
-  color: var(--drivschol-black, #000);
+  color: var(--drivschol-black, blue);
 }
 .hero-section__images {
   display: none;
@@ -920,7 +920,7 @@ a:visited {
 .features-two__title {
   font-size: 20px;
   line-height: 30px;
-  color: var(--drivschol-black, #000);
+  color: var(--drivschol-black, blue);
   margin: 22px 0 0;
   font-weight: 800;
 }
@@ -1004,7 +1004,7 @@ a:visited {
   font-size: 20px;
   line-height: 30px;
   margin: 0;
-  color: var(--drivschol-black, #000);
+  color: var(--drivschol-black, blue);
   font-weight: 800;
 }
 
@@ -1025,7 +1025,7 @@ a:visited {
   text-transform: uppercase;
   font-weight: 700;
   margin: 0 0 50px;
-  color: var(--drivschol-black, #000);
+  color: var(--drivschol-black, blue);
 }
 @media (max-width: 767px) {
   .features-one__title {
@@ -1082,7 +1082,7 @@ a:visited {
 .features-one__box__title {
   max-width: 131px;
   font-size: 15px;
-  color: var(--drivschol-black, #000);
+  color: var(--drivschol-black, blue);
   font-weight: 700;
   margin: 18px 0 0;
 }
@@ -1094,7 +1094,7 @@ a:visited {
 #  Footer Section
 --------------------------------------------------------------*/
 .main-footer {
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   position: relative;
   padding-top: 108px;
   background-repeat: no-repeat;
@@ -1118,7 +1118,7 @@ a:visited {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: auto;
-  background-color: var(--drivschol-black2, #111117);
+  background-color: var(--drivschol-black2, blue);
   mix-blend-mode: luminosity;
 }
 .main-footer__title {
@@ -1148,7 +1148,7 @@ a:visited {
   background-color: var(--drivschol-white, #fff);
 }
 .main-footer .drivschol-btn--base2:hover {
-  color: var(--drivschol-black2, #111117);
+  color: var(--drivschol-black2, blue);
 }
 .main-footer__copyright {
   position: relative;
@@ -1166,7 +1166,12 @@ a:visited {
   font-size: 16px;
   line-height: 30px;
   font-weight: 500;
-  color: var(--drivschol-white, #fff);
+  color:  #fff;
   margin: 0;
 }
 /*# sourceMappingURL=drivschol-landing.css.map */
+
+input, textarea {
+  background-color: white!important;
+  border: solid 1px black;
+}
