--- a/assets/css/drivschol.css
+++ b/assets/css/drivschol.css
@@ -7472,8 +7472,8 @@ input, textarea {
   right: 50px;
   width: 56px;
   height: 43px;
-  background:  #fff;
-  clip-path: polygon(0 0, 100% 0, 100% 100%);
+  background:  transparent;
+  /* clip-path: polygon(0 0, 100% 0, 100% 100%); */
   z-index: 1;
 }
 .testimonials-card__inner:hover {
@@ -16424,6 +16424,7 @@ div #colinhas{
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
+   background-color: transparent;
    animation-name: colinha;
    animation-duration: 15000.25ms;
    animation-timing-function: ease;
@@ -16477,4 +16478,22 @@ div #colinhas{
   border: solid transparent 1px;
   border-radius: 5px;
   /* margin-top: 3%; */
+}
+
+@media(max-width:600px){
+  #logo-jftech{
+    background-color: white;
+    height: 60px;
+    width: 99%;
+    border: solid transparent 1px;
+    border-radius: 5px;
+     margin:auto;
+  }
+
+  .main-slider-one__item{
+    width: 100%;
+    height: 100%;
+    background-position: 100% 90%;
+    background-size: 102% 70vh;
+  }
 }
