--- a/assets/css/drivschol-custom-rtl.css
+++ b/assets/css/drivschol-custom-rtl.css
@@ -29,11 +29,11 @@ body {
   transform: rotate(180deg);
 }
 
-.main-header__right::after {
+.d-none::after {
   transform: rotate(180deg);
 }
 
-.main-header__right::before {
+.d-none::before {
   transform: rotate(90deg);
   height: 56%;
 }
