--- a/assets/css/drivschol-dark.css
+++ b/assets/css/drivschol-dark.css
@@ -132,7 +132,7 @@
 .main-header__logo::before,
 .main-header__logo::after,
 .main-header__logo,
-.main-header__right::after {
+.d-none::after {
   background-color: var(--drivschol-black3);
 }
 
